# ncnn

./: .gitmodules  CMakeLists.txt  Makefile.mini  README.md
autotest/: autotest.cpp  test_convlution.h  test_deconvolution.h  test_innerproduct.h
examples/simple_fc/: CMakeLists.txt  simple_fc.cpp  simple_fc.param  write_model  write_model.cpp
src/: CMakeLists.txt  im2col.cpp  im2col.h  mat.h  platform.h.in
src/layer/: convolution.cpp  deconvolution.cpp  innerproduct.cpp
tools/: CMakeLists.txt
tools/tensorflow/: example_ckpt2pb.py
